# bumpfontversion

./: README.md  pyproject.toml
bumpfontversion/: __main__.py  glyphshandler.py  ufohandler.py
