[tool.poetry]
name = "bumpfontversion"
version = "0.4.0"
description = "Bumps the version of a font source file"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
openstep-plist = "*"
ufoLib2 = "*"
glyphsLib = "6.0.0b4"
fontTools = "*"
bump2version = "1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
bumpfontversion = 'bumpfontversion:main'
